--- a/loginPage.css
+++ b/loginPage.css
@@ -75,7 +75,7 @@ html, body {
 /* Triangle Section */
 .page1__triangle {
   width: 90vw;
-  max-width: 73.5rem; /* 1000px */
+  max-width: 60.5rem; /* 1000px */
   aspect-ratio: 1 / 0.5;
   background: url('./images/loginpage/middle-triangle.png') no-repeat center center;
   background-size: contain;
@@ -137,12 +137,14 @@ html, body {
 }
 
 .btn{
-  padding: 10px 25px !important;
+  padding: 4px 25px !important;
   margin-top: 10px;
   border-radius: 12px;
   color: aliceblue;
   background-color: #D62A34;
   font-size: 1rem !important;  /* 18px */
+  font-family: 'BundayClean-semiBold', sans-serif !important;
+
 }
 .btn:hover{
   background-color: #991f25;
@@ -198,9 +200,10 @@ html, body {
   position: absolute;
   bottom: 0px;
   width: 70vw;
-  max-width: 65.5rem; /* 1000px */  padding: 1.7rem;
+  opacity: 0.88 !important;
+  max-width: 55.5rem; /* 1000px */  padding: 1.7rem;
   z-index: 10;
-  background-color: #D62A34;
+  background-color: #DB0122;
 }
 
 /* Mobile-specific layout (max-width: 1024px) */
@@ -253,12 +256,15 @@ html, body {
   }
 
   .page1__triangle button {
-    font-size: 0.6rem !important; /* 10px */
-    padding: 0.125rem 0.5rem !important; /* 2px 8px */
+    font-size: 0.7rem !important; /* 10px */
+    padding: 0rem 0.7rem !important; /* 2px 8px */
     height: 1.75rem; /* 28px */
-    line-height: 1;
+    line-height: 0;
     border-radius: 8px !important;
     margin-top: 0.0625rem; /* 1px */
+    font-family: 'BundayClean-semiBold', sans-serif;
+
+    
   }
 
   .middleText{
@@ -273,6 +279,7 @@ html, body {
     width: 100% !important;
     padding: 6.25rem;
     z-index: 10;
+    align-content: center !important;
   }
 
   .bgRedBg {
@@ -285,16 +292,24 @@ html, body {
   .bgRedBg p {
     font-size: 0.625rem !important; /* 10px */
     white-space: nowrap;
+    margin-top: 0.55rem !important; 
+
+  }
+
+  .bgRedBg h3{
+    font-size: 1.275rem !important; /* 20px */
   }
 
   .logo-img {
-    height: 1.875rem !important; /* 30px */
+    height: 1.175rem !important; /* 30px */
     object-fit: contain !important;
   }
 
   .desktop-header {
     display: none;
   }
+
+  
 }
 
 /* Tablet to small desktop (min-width: 768px) */
